--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
   <div class='background'>
     <div class='maintext'>
       <h1>Rabbit Waves</h1>
+      <h2>- coming soon -</h2>
     </div>
   </div>
 </header>
 <main>
-
-<p>SOON.</p>
 
 </main>
 
