--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
 </head>
 <body>
 <header>
-  <div class='background'>
-    <div class='maintext'>
-      <h2>- coming soon -</h2>
+    <div class='center'>
+      <img src='media/content/rabbit_main.jpg'>
+      <img src='media/interface/title.png'>
+      <h1>- coming soon -</h1>
     </div>
-  </div>
 </header>
 <main>
 
 </main>
 
+</body>
 <footer>
   <a href="https://100r.co" target="_blank">Hundredrabbits</a> | © 2024 <a href="https://github.com/rekkabell/rabbitwaves" target="_blank">BY-NC-SA 4.0</a>
 </footer>
-
-</body>
 
 </html>
