--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
 <header>
     <div class='center'>
-      <img src='media/content/rabbit_main.jpg'>
-      <img src='media/interface/title.png'>
+      <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
+      <img src='media/interface/title.png' alt='Rabbit Waves'>
       <h1>- coming soon -</h1>
     </div>
 </header>
