--- a/index.html
+++ b/index.html
@@ -15,19 +15,39 @@
 </head>
 <body>
 <header>
-    <div class='center'>
-      <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
-      <img src='media/interface/title.png' alt='Rabbit Waves'>
-      <h1>- coming soon -</h1>
-    </div>
+    <div id='wrap'>
+       <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
+        <!-- <a class='handflags' alt="hand flags" title="hand flags" href="site/handflags.html">
+          <span>Hand flags</span></a> -->
+  </div>
+  <!-- <style>
+    #wrap span { text-indent:-9999px }
+    #wrap a { display:block;position:absolute }
+    #wrap a * { display:none }
+    #wrap a.handflags {width: 7%;height: 24%;top: 27%;left: 28%;}
+  </style>  -->
+  <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
+  <h1>- Soon -</h1>
 </header>
 <main>
-
 </main>
-
 </body>
 <footer>
-  <a href="https://100r.co" target="_blank">Hundredrabbits</a> | © 2024 <a href="https://github.com/rekkabell/rabbitwaves" target="_blank">BY-NC-SA 4.0</a>
+  <p class='noprint'>This is a test</p>
+  <div id='wrapfooter'>
+      <img src='media/interface/footer.jpg' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
+        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
+          <span>100r.co</span></a>
+        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
+          <span>license</span></a>
+  </div>
+  <style>
+    #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
+    #wrapfooter span { text-indent:-9999px }
+    #wrapfooter a { display:block;position:absolute }
+    #wrapfooter a * { display:none }
+    #wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
+    #wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
+  </style> 
 </footer>
-
 </html>
