--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     #wrap a.handflags {width: 7%;height: 24%;top: 27%;left: 28%;}
   </style>  -->
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
-  <h1>- Soon -</h1>
+  <img src='media/interface/soon.jpg' alt='soon' class='title'>
 </header>
 <main>
 </main>
