--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 </main>
 </body>
 <footer>
-  <p class='noprint'>This is a test</p>
   <div id='wrapfooter'>
       <img src='media/interface/footer.jpg' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
+        <a class='hundredrabbits' alt="hundredrabbits" title="100r.co" href="https://100r.co">
           <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
+        <a class='license' alt="BY-NC-SA 4.0" title="BY-NC-SA 4.0" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
   </div>
   <style>
