--- a/site/handflags.html
+++ b/site/handflags.html
@@ -18,13 +18,16 @@
     <a href="../index.html"><img src='../media/interface/title.png' alt='Rabbit Waves' class='title'></a>
 </header>
 <main>
-    <img src='../media/content/2024_phonetic_alphabet.jpg' alt='a complete list of the flags that represent each letter of the phonetic alphabet, each word has a pronounciation guide'>
-  <p class='noprint'>Phonetic Alphabet. Alfa : Al fah, Bravo : Brah voh, Charlie : Char Lee, Delta : Dell tah, Echo : Eck oh, Foxtrot : Foks trot, Golf, Hotel : Hoh tel, India : In dee ah, Juliet : Jee lee ett, Kilo : Key loh, Lima : Lee mah, Mike, November : Novem ber, Oscar : Oss cah, Papa: Pah pah, Quebec : Keh Beck, Romeo : Row me oh, Sierra : See air rah, Tango : Tan go, Uniform : Oo nee form, Victor : Vik tah, Whiskey : Wiss key, X-ray : Ecks ray, Yankee : Yang kee, Zulu : Zoo loo, 1st substitute, 2nd substitute, 3rd substitute, Answering penant or decimal point, 1 : Unaone : Oo nah wun, 2 : Bissotwo : Bee soh too, 3 : Terratree : Tay rah tree, 4 : Kartefour : Kar tay fower, 5 : Pantafive : Pan tah five, 6 : Soxisix : Sok see six, 7 : Setteseven : Say tay seven, 8 : Oktoeight : Ok toh ait, 9 : Novenine : No vay niner, 0 : Nadazero : Nah dah zay roh</p>
+  
   <img src='../media/content/2024_semaphore.jpg' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+
+   <img src='../media/content/semaphore_anim.gif' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+
   <img src='../media/content/2024_morse_handflags.jpg' alt='rabbits showing the positions to communicate morse with hand flags'>
-  <p class='noprint'>Morse signaling by hand flags or arms : dash, dot, separation of dots and dashes, separation of letters/groups/words, request for repetition if by the receiving station or erase signals if made by the transmitting station. Allow for enough time between dots and dashes and between letters, groups, or words.</p>
+    <p class='noprint'>Morse signaling by hand flags or arms : dash, dot, separation of dots and dashes, separation of letters/groups/words, request for repetition if by the receiving station or erase signals if made by the transmitting station. Allow for enough time between dots and dashes and between letters, groups, or words.</p>
+
   <img src='../media/content/2024_repeat_handflags.jpg' alt='a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags'>
-  <p class="noprint">I'm going to repeat the signals.</p>
+    <p class="noprint">a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags.</p>
 </main>
 </body>
 <footer>
