--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
 <header>
     <div id='wrap'>
        <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
-        <!-- <a class='handflags' alt="hand flags" title="hand flags" href="site/handflags.html">
-          <span>Hand flags</span></a> -->
+        <a class='flagsignaling1' alt="signaling with flags" title="signaling with flags" href="site/flag_signaling.html">
+          <span>Quebec Romeo One</span></a>
+        <a class='flagsignaling2' alt="signaling with flags" title="signaling with flags" href="site/flag_signaling.html">
+          <span>Answering pennant</span></a>
   </div>
-  <!-- <style>
+  <style>
+    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
     #wrap span { text-indent:-9999px }
     #wrap a { display:block;position:absolute }
     #wrap a * { display:none }
-    #wrap a.handflags {width: 7%;height: 24%;top: 27%;left: 28%;}
-  </style>  -->
+    #wrap a.flagsignaling1 {width: 10%;height: 24%;top: 27%;left: 17%;}
+     #wrap a.flagsignaling2 {width: 14%;height: 24%;top: 7%;left: 51%;}
+  </style> 
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
   <img src='media/interface/soon.jpg' alt='soon' class='title'>
 </header>
