--- a/site/handflags.html
+++ b/site/handflags.html
@@ -15,24 +15,59 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src='../media/interface/title.png' alt='Rabbit Waves' class='title'></a>
+    <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
 </header>
 <main>
+
+<div id='wrap'>
+  <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy' alt='a guide on the uses and ways to use hand flag to communicate from afar'>
+    <a class='oscar' alt="oscar flag" title="oscar flag" href="flag_signaling.html">
+          <span>oscar</span></a>
+    <a class='papa' alt="papa flag" title="papa flag" href="flag_signaling.html">
+          <span>papa</span></a>
+    <a class='history' alt="sempahore history PDF - 4 MB" title="sempahore history PDF - 4 MB" href="../media/docs/semaphore_history.pdf">
+          <span>papa</span></a>
+    <p class='noprint'>Flag semaphore is a way of communicating at a distance by using hand flags. Information - such as the letters of the alphabet, numerals, etc - are encoded by the position of the flags. At sea, the Oscar flag acts as a signaling flag (on land, it's the Papa flag). To start signaling letters, signal J. To start signaling numerals, signal the hand flag position for numerals. To request permission to start a transmission, signal the "attention" signal(which doubles as the error signal). The one receiving the signal uses the "ready to receive a signal" flag position, which consists of raising the two flags overhead, then to drop them to the rest position (only once). The one receiving the signals ends the transmission with the same "ready to receive" flag signal. The one receiving the signal can then reply with the "attention" signal to make a reply. At night lighted wants replace the hand flags. It's also possible to signal using your arms only, but signals are easier to read with flags.</p>
+  <style>
+    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
+    #wrap span { text-indent:-9999px }
+    #wrap a { display:block;position:absolute }
+    #wrap a * { display:none }
+    #wrap a.oscar {width: 12%;height: 2%;top: 2%;left: 24%}
+    #wrap a.papa {width: 11%;height: 2%;top: 2%;left: 64%;}
+    #wrap a.history {width: 62%;height: 3%;top: 4%;left: 34%;}
+  </style>   
+<div id='wrap'>
   
-  <img src='../media/content/2024_semaphore.jpg' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+  <img src='../media/content/2024_semaphore.jpg' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
 
-   <img src='../media/content/semaphore_anim.gif' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+   <img src='../media/content/semaphore_anim.gif' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
 
-  <img src='../media/content/2024_morse_handflags.jpg' alt='rabbits showing the positions to communicate morse with hand flags'>
+<div id='wrap'>
+  <img src='../media/content/2024_japanese_semaphore.jpg' loading ='lazy' alt='a description of how the japanese sephamore system works'>
+   <a class='japanesesemaphore' alt="japanese semaphore" title="japanese semaphore" href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">
+          <span>Japanese Semaphore</span></a>
+    <p class='noprint'>The Japanese devised their own semaphore system adapted to fit their writing system which has way more characters than the Latin alphabet. Most characters require two flag positions to complete(an image of the two flag signals for the Japanese character A)... some require three(an image of the three flag signals for the Japanese character HO). When signaling the motion describes the angles of the brush strokes used when writing, it also takes the order of the strokes into account. Below the text is a graphic of an example of stroke order for the Japanese characters A and HO.</p>
+  <style>
+    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
+    #wrap span { text-indent:-9999px }
+    #wrap a { display:block;position:absolute }
+    #wrap a * { display:none }
+    #wrap a.japanesesemaphore {width: 66%;height: 3%;top: 0%;left: 16%;}
+  </style>   
+<div id='wrap'>
+
+  <img src='../media/content/2024_morse_handflags.jpg' loading ='lazy' alt='rabbits showing the positions to communicate morse with hand flags'>
     <p class='noprint'>Morse signaling by hand flags or arms : dash, dot, separation of dots and dashes, separation of letters/groups/words, request for repetition if by the receiving station or erase signals if made by the transmitting station. Allow for enough time between dots and dashes and between letters, groups, or words.</p>
 
-  <img src='../media/content/2024_repeat_handflags.jpg' alt='a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags'>
+  <img src='../media/content/2024_repeat_handflags.jpg' loading ='lazy' alt='a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags'>
     <p class="noprint">a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags.</p>
+
 </main>
 </body>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
+      <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
