--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
 <header>
     <div id='wrap'>
        <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
-        <a class='flagsignaling1' alt="signaling with flags" title="signaling with flags" href="site/flag_signaling.html">
+        <a class='flagsignaling1' alt="signaling with flags" title="signaling with flags" href="site/international_maritime_signal_flags.html">
           <span>Quebec Romeo One</span></a>
-        <a class='flagsignaling2' alt="signaling with flags" title="signaling with flags" href="site/flag_signaling.html">
-          <span>Answering pennant</span></a>
   </div>
   <style>
     #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
     #wrap span { text-indent:-9999px }
     #wrap a { display:block;position:absolute }
     #wrap a * { display:none }
-    #wrap a.flagsignaling1 {width: 10%;height: 24%;top: 27%;left: 17%;}
-     #wrap a.flagsignaling2 {width: 14%;height: 24%;top: 7%;left: 51%;}
+    #wrap a.flagsignaling1 {width: 11%;height: 13%;top: 37%;left: 32%;}
   </style> 
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
   <img src='media/interface/soon.jpg' alt='soon' class='title'>
