--- a/site/international_maritime_signal_flags.html
+++ b/site/international_maritime_signal_flags.html
@@ -19,20 +19,9 @@
 </header>
 <main>
 
-<div id='wrap'>
   <img src='../media/content/2024_signaling_intro.jpg'>
     <p class='noprint'>The International Code of Signals is a system of signals and codes designed to communicate important safety and navigational messages when speaking is difficult (because of language barriers, distance, etc). A standardized alphabet was created (see below image), along with a spoken word form for each one, designed to set apart similar-sounding letters like B, V and D. Each letter/numeral was assigned a flag:</p>
-    <a class='ics' alt="international code of signals PDF - 40 MB" title="international code of signals PDF - 40 MB" href="../media/docs/ics_pub102bk.pdf" target="_blank">
-          <span>International Code of Signals PDF</span></a>
-</div>
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.ics {width: 44%;height: 10%;top: 5%;left: 7%;}
-  </style> 
-  
+
   <img src='../media/content/2024_phonetic_alphabet.jpg' loading='lazy' alt='a complete list of the flags that represent each letter of the phonetic alphabet, each word has a pronounciation guide'>
     <p class='noprint'>Phonetic Alphabet. Alfa : Al fah, Bravo : Brah voh, Charlie : Char Lee, Delta : Dell tah, Echo : Eck oh, Foxtrot : Foks trot, Golf, Hotel : Hoh tel, India : In dee ah, Juliet : Jee lee ett, Kilo : Key loh, Lima : Lee mah, Mike, November : Novem ber, Oscar : Oss cah, Papa: Pah pah, Quebec : Keh Beck, Romeo : Row me oh, Sierra : See air rah, Tango : Tan go, Uniform : Oo nee form, Victor : Vik tah, Whiskey : Wiss key, X-ray : Ecks ray, Yankee : Yang kee, Zulu : Zoo loo, 1st substitute, 2nd substitute, 3rd substitute, Answering penant or decimal point, 1 : Unaone : Oo nah wun, 2 : Bissotwo : Bee soh too, 3 : Terratree : Tay rah tree, 4 : Kartefour : Kar tay fower, 5 : Pantafive : Pan tah five, 6 : Soxisix : Sok see six, 7 : Setteseven : Say tay seven, 8 : Oktoeight : Ok toh ait, 9 : Novenine : No vay niner, 0 : Nadazero : Nah dah zay roh</p>
 
@@ -57,7 +46,7 @@
     #wrap span { text-indent:-9999px }
     #wrap a { display:block;position:absolute }
     #wrap a * { display:none }
-    #wrap a.ics2 {width: 58%;height: 10%;top: 3%;left: 9%;}
+    #wrap a.ics2 {width: 16%;height: 8%;top: 22%;left: 56%;}
   </style> 
 
   <img src='../media/content/2024_howtosignal_flags.jpg' loading='lazy' alt='instructions on how to communicate with signal flags'>
@@ -69,9 +58,7 @@
 <div id='wrap'>
   <img src='../media/content/2024_handflag_intro.jpg' loading='lazy' alt='a rabbit waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags'>
     <p class='noprint'>A rabbit waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags.</p>
-    <a class='flagsemaphore1' alt="hand flag semaphore" title="hand flag semaphore" href="handflags.html">
-          <span>Hand flag semaphore</span></a>
-    <a class='flagsemaphore2' alt="hand flag semaphore" title="hand flag semaphore" href="handflags.html">
+    <a class='flagsemaphore' alt="hand flag semaphore" title="hand flag semaphore" href="hand_flag_semaphore.html">
           <span>Hand flag semaphore</span></a>
 </div>
   <style>
@@ -79,8 +66,7 @@
     #wrap span { text-indent:-9999px }
     #wrap a { display:block;position:absolute }
     #wrap a * { display:none }
-    #wrap a.flagsemaphore1 {width: 42%;height: 31%;top: 10%;left: 8%; }
-    #wrap a.flagsemaphore2 {width: 26%;height: 31%;top: 31%;left: 58%; }
+    #wrap a.flagsemaphore {width: 25%;height: 13%;top: 25%;left: 21%;}
   </style> 
 </main>
 </body>
