--- a/index.html
+++ b/index.html
@@ -17,22 +17,14 @@
 <header>
     <div id='wrap'>
        <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
-        <a class='flagsignaling1' alt="signaling with flags" title="signaling with flags" href="site/international_maritime_signal_flags.html">
+        <a style='width: 11%;height: 13%;top: 37%;left: 32%' alt="signaling with flags" title="signaling with flags" href="site/flags_maritime.html">
           <span>Quebec Romeo One</span></a>
   </div>
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.flagsignaling1 {width: 11%;height: 13%;top: 37%;left: 32%;}
-  </style> 
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
   <img src='media/interface/soon.jpg' alt='soon' class='title'>
 </header>
 <main>
 </main>
-</body>
 <footer>
   <div id='wrapfooter'>
       <img src='media/interface/footer.jpg' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
@@ -41,13 +33,7 @@
         <a class='license' alt="BY-NC-SA 4.0" title="BY-NC-SA 4.0" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
   </div>
-  <style>
-    #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
-    #wrapfooter span { text-indent:-9999px }
-    #wrapfooter a { display:block;position:absolute }
-    #wrapfooter a * { display:none }
-    #wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
-    #wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
-  </style> 
+
 </footer>
+</body>
 </html>
