--- a/site/about.html
+++ b/site/about.html
@@ -19,11 +19,10 @@
 </header>
 <main>
   <gallery>
-      <a href="hand_flag_semaphore.html"><img src='../media/interface/hand_flag_semaphore.jpg' alt='Hand flag semaphore'></a>
-      <a href="international_maritime_signal_flags.html"><img src='../media/interface/international_maritime_signal_flags.jpg' alt='International Maritime Signal Flags'></a>
+      <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' alt='Hand flag semaphore'></a>
+      <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' alt='International Maritime Signal Flags'></a>
   </gallery>
 </main>
-</body>
 <footer>
     <div id='wrapfooter'>
       <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
@@ -32,13 +31,6 @@
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
   </div>
-  <style>
-    #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
-    #wrapfooter span { text-indent:-9999px }
-    #wrapfooter a { display:block;position:absolute }
-    #wrapfooter a * { display:none }
-    #wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
-    #wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
-  </style> 
 </footer>
+</body>
 </html>
