--- a/site/flags.html
+++ b/site/flags.html
@@ -21,41 +21,23 @@
 
 <div id='wrap'>
   <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy' alt='a guide on the uses and ways to use hand flag to communicate from afar'>
-    <a class='oscar' alt="oscar flag" title="oscar flag" href="international_maritime_signal_flags.html">
+    <a style='width: 9%;height: 2%;top: 3%;left: 26%' alt="oscar flag" title="oscar flag" href="flags_maritime.html">
           <span>oscar</span></a>
-    <a class='history' alt="sempahore history PDF - 4 MB" title="semaphore history PDF - 4 MB" href="../media/docs/semaphore_history.pdf">
+    <a style='width: 13%;height: 2%;top: 8%;left: 58%' alt="sempahore history PDF - 4 MB" title="semaphore history PDF - 4 MB" href="../media/docs/semaphore_history.pdf">
           <span>Semaphore history</span></a>
     <p class='noprint'>Flag semaphore is a way of communicating at a distance by using hand flags. Information - such as the letters of the alphabet, numerals, etc - are encoded by the position of the flags. At sea, the Oscar flag acts as a signaling flag (on land, it's the Papa flag). To start signaling letters, signal J. To start signaling numerals, signal the hand flag position for numerals. To request permission to start a transmission, signal the "attention" signal(which doubles as the error signal). The one receiving the signal uses the "ready to receive a signal" flag position, which consists of raising the two flags overhead, then to drop them to the rest position (only once). The one receiving the signals ends the transmission with the same "ready to receive" flag signal. The one receiving the signal can then reply with the "attention" signal to make a reply. At night lighted wants replace the hand flags. It's also possible to signal using your arms only, but signals are easier to read with flags.</p>
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.oscar {width: 9%;height: 2%;top: 3%;left: 26%;}
-    #wrap a.history {width: 13%;height: 2%;top: 8%;left: 58%;}
-  </style>   
 <div id='wrap'>
-  
   <img src='../media/content/2024_semaphore.jpg' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
 
    <img src='../media/content/semaphore_anim.gif' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
 
 <div id='wrap'>
   <img src='../media/content/2024_japanese_semaphore.jpg' loading ='lazy' alt='a description of how the japanese sephamore system works'>
-   <a class='japanesesemaphore' alt="japanese semaphore Wikipedia article" title="japanese semaphore" href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">
+   <a style="width: 21%;height: 8%;top: 8%;left: 59%" alt="japanese semaphore Wikipedia article" title="japanese semaphore" href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">
           <span>Japanese Semaphore</span></a>
-    <p class='noprint'>The Japanese devised their own semaphore system adapted to fit their writing system which has way more characters than the Latin alphabet. Most characters require two flag positions to complete(an image of the two flag signals for the Japanese character A)... some require three(an image of the three flag signals for the Japanese character HO). When signaling the motion describes the angles of the brush strokes used when writing, it also takes the order of the strokes into account. Below the text is a graphic of an example of stroke order for the Japanese characters A and HO.</p>
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.japanesesemaphore {width: 21%;height: 8%;top: 8%;left: 59%;}
-  </style>   
+    <p class='noprint'>The Japanese devised their own semaphore system adapted to fit their writing system which has way more characters than the Latin alphabet. Most characters require two flag positions to complete(an image of the two flag signals for the Japanese character A)... some require three(an image of the three flag signals for the Japanese character HO). When signaling the motion describes the angles of the brush strokes used when writing, it also takes the order of the strokes into account. Below the text is a graphic of an example of stroke order for the Japanese characters A and HO.</p>  
 <div id='wrap'>
-
 </main>
-</body>
 <footer>
     <div id='wrapfooter'>
       <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
@@ -64,14 +46,6 @@
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
   </div>
-  <style>
-    #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
-    #wrapfooter span { text-indent:-9999px }
-    #wrapfooter a { display:block;position:absolute }
-    #wrapfooter a * { display:none }
-    #wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
-    #wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
-  </style> 
 </footer>
-
+</body>
 </html>
