--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -18,15 +18,14 @@
     <a href="../index.html"><img src='../media/interface/title.png' loading='lazy' alt='Rabbit Waves' class='title'></a>
 </header>
 <main>
-
   <img src='../media/content/2024_signaling_intro.jpg'>
     <p class='noprint'>The International Code of Signals is a system of signals and codes designed to communicate important safety and navigational messages when speaking is difficult (because of language barriers, distance, etc). A standardized alphabet was created (see below image), along with a spoken word form for each one, designed to set apart similar-sounding letters like B, V and D. Each letter/numeral was assigned a flag:</p>
 
   <img src='../media/content/2024_phonetic_alphabet.jpg' loading='lazy' alt='a complete list of the flags that represent each letter of the phonetic alphabet, each word has a pronounciation guide'>
     <p class='noprint'>Phonetic Alphabet. Alfa : Al fah, Bravo : Brah voh, Charlie : Char Lee, Delta : Dell tah, Echo : Eck oh, Foxtrot : Foks trot, Golf, Hotel : Hoh tel, India : In dee ah, Juliet : Jee lee ett, Kilo : Key loh, Lima : Lee mah, Mike, November : Novem ber, Oscar : Oss cah, Papa: Pah pah, Quebec : Keh Beck, Romeo : Row me oh, Sierra : See air rah, Tango : Tan go, Uniform : Oo nee form, Victor : Vik tah, Whiskey : Wiss key, X-ray : Ecks ray, Yankee : Yang kee, Zulu : Zoo loo, 1st substitute, 2nd substitute, 3rd substitute, Answering penant or decimal point, 1 : Unaone : Oo nah wun, 2 : Bissotwo : Bee soh too, 3 : Terratree : Tay rah tree, 4 : Kartefour : Kar tay fower, 5 : Pantafive : Pan tah five, 6 : Soxisix : Sok see six, 7 : Setteseven : Say tay seven, 8 : Oktoeight : Ok toh ait, 9 : Novenine : No vay niner, 0 : Nadazero : Nah dah zay roh</p>
 
- <img src='../media/content/2024_assigned_meanings_handflags.jpg' loading='lazy' alt='instructions on the different ways to use signal flags'>
-  <p class='noprint'>To save time when signaling, each flag has an assigned meaning to communicate very urgent or common messages. When used alone, the Oscar flag means "man overboard." When paired in twos, flags take on more specific meanings. For example, the Uniform and Whiskey flags used together in that order mean "I wish you a pleasant voyage." Numerals appended to two flags permit for more detailed messages, for example: The Quebec flag paired with the Romeo flags and the 1 number flag means "Can I come alongside?" Three letter signals that begin with Mike are reserved to communicate medical emergencies, for example: Mike followed by Alpha and then by a 2nd substitute flag is code for "I request urgent medical advice."</p>
+  <img src='../media/content/2024_assigned_meanings_handflags.jpg' loading='lazy' alt='instructions on the different ways to use signal flags'>
+    <p class='noprint'>To save time when signaling, each flag has an assigned meaning to communicate very urgent or common messages. When used alone, the Oscar flag means "man overboard." When paired in twos, flags take on more specific meanings. For example, the Uniform and Whiskey flags used together in that order mean "I wish you a pleasant voyage." Numerals appended to two flags permit for more detailed messages, for example: The Quebec flag paired with the Romeo flags and the 1 number flag means "Can I come alongside?" Three letter signals that begin with Mike are reserved to communicate medical emergencies, for example: Mike followed by Alpha and then by a 2nd substitute flag is code for "I request urgent medical advice."</p>
 
   <img src='../media/content/2024_substitute_handflags.jpg' loading='lazy' alt='instructions on how to use substitute flags'>
     <p class='noprint'>The title reads: Substitutes. To avoid having to carry multiple flags of the same signal, the ICS(international code of signals) uses 3 substitute flags. A substitute flag repeats the one at the indicated position. A drawing shows 3 flags for the 3 substitute flags. An example shows how to signal DD, which is to fly the flag signal Delta followed by the 1st substitute flag. DD means: "boats are not allowed to come alongside."</p>
@@ -37,17 +36,9 @@
 <div id='wrap'>
   <img src='../media/content/2024_otherlanguages_ics.jpg' loading='lazy' alt='an example on how the ICS signals are used to communicate with others who do not speak the same language as you'>
     <p class='noprint'>One practical use of the International Code of Signals(ICS) is that all of the messages are standardized and come in 9 languages: English, French, Italian, German, Japanese, Spanish, Norwegian, Russian and Greek. The signal flag Victor was assigned "I require assistance" as a coded meaning. Under this, is illustration featuring a conversation betweeo a spectacled guillemot and a herring gull. The spectacled guillemot speaks Japanese, while the herring gull speaks Russian. The guillemot is yelling "Tasukete!" but the herring gull does not understand. The guillemot then yells out the coded meaning for Victor, "ビクター! ビクター(Bikutaa! Bikutaa!)" The herring gull understood this, and says Я понимаю (Ya ponimayu, to mean "I understand").</p>
-    <a class='ics2' alt="international code of signals PDF - 40 MB" title="international code of signals PDF - 40 MB" href="../media/docs/ics_pub102bk.pdf" target="_blank">
-          <span>International Code of Signals PDF</span></a>
+    <a style='width: 16%;height: 8%;top: 22%;left: 56%' alt="international code of signals PDF - 40 MB" title="international code of signals PDF - 40 MB" href="../media/docs/ics_pub102bk.pdf" target="_blank">
+    <span>International Code of Signals PDF</span></a>
 </div>
-
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.ics2 {width: 16%;height: 8%;top: 22%;left: 56%;}
-  </style> 
 
   <img src='../media/content/2024_howtosignal_flags.jpg' loading='lazy' alt='instructions on how to communicate with signal flags'>
     <p class='noprint'>The title reads, How to communicate with another vessel using flags. One: A murrelet raises a Kilo flag to mean "I wish to communicate with you." Two: The herring gull raises an answering pennant to mean that the signal was understood. Three: The murrelet raises a Romeo flag followed by a Foxtrot flag, to mean "Will you lead me to a safe anchorage?" Four: The herring gull raises an answering pennant to mean that the signal was understood. Five: The herring gull raises a Charlie flag to mean "Affirmative." Six: The murrelet raises  an answering pennant to mean that the signalling is now over. Seven: The herring gull raises an answering pennant to mean that the signal was understood.</p>
@@ -58,18 +49,10 @@
 <div id='wrap'>
   <img src='../media/content/2024_handflag_intro.jpg' loading='lazy' alt='a rabbit waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags'>
     <p class='noprint'>A rabbit waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags.</p>
-    <a class='flagsemaphore' alt="hand flag semaphore" title="hand flag semaphore" href="hand_flag_semaphore.html">
+    <a style='width: 25%;height: 13%;top: 25%;left: 21%' alt="hand flag semaphore" title="hand flag semaphore" href="flags.html">
           <span>Hand flag semaphore</span></a>
 </div>
-  <style>
-    #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-    #wrap span { text-indent:-9999px }
-    #wrap a { display:block;position:absolute }
-    #wrap a * { display:none }
-    #wrap a.flagsemaphore {width: 25%;height: 13%;top: 25%;left: 21%;}
-  </style> 
 </main>
-</body>
 <footer>
     <div id='wrapfooter'>
       <img src='../media/interface/footer.jpg' loading='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
@@ -78,14 +61,6 @@
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves" target="_blank">
           <span>license</span></a>
   </div>
-  <style>
-    #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
-    #wrapfooter span { text-indent:-9999px }
-    #wrapfooter a { display:block;position:absolute }
-    #wrapfooter a * { display:none }
-    #wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
-    #wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
-  </style> 
 </footer>
-
+</body>
 </html>
