--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <span>Quebec Romeo One</span></a>
   </div>
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
-  <img src='media/interface/soon.jpg' alt='soon' class='title'>
 </header>
 <main>
 </main>
@@ -32,6 +31,8 @@
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="BY-NC-SA 4.0" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
+        <a class='about' alt="about" href="site/about.html">
+          <span>about</span></a>
   </div>
 
 </footer>
