--- a/site/about.html
+++ b/site/about.html
@@ -18,6 +18,8 @@
     <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
 </header>
 <main>
+  <img src='../media/interface/links.jpg' alt='links are indicated by areas with dotted lines'></a>
+  <img src='../media/interface/pages.jpg' alt='pages' class='title'></a>
   <gallery>
       <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' alt='Hand flag semaphore'></a>
       <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' alt='International Maritime Signal Flags'></a>
@@ -30,6 +32,8 @@
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
+        <a class='about' alt="about" href="about.html">
+          <span>about</span></a>
   </div>
 </footer>
 </body>
