--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -60,6 +60,8 @@
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves" target="_blank">
           <span>license</span></a>
+        <a class='about' alt="about" href="about.html">
+          <span>about</span></a>
   </div>
 </footer>
 </body>
