--- a/site/morse.html
+++ b/site/morse.html
@@ -33,6 +33,8 @@
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
+        <a class='about' alt="about" href="about.html">
+          <span>about</span></a>
   </div>
   <style>
     #wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
