--- a/site/flags.html
+++ b/site/flags.html
@@ -45,6 +45,8 @@
           <span>100r.co</span></a>
         <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
           <span>license</span></a>
+        <a class='about' alt="about" href="about.html">
+          <span>about</span></a>
   </div>
 </footer>
 </body>
