--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -30,6 +30,13 @@
   <img src='../media/content/2024_substitute_handflags.jpg' loading='lazy' alt='instructions on how to use substitute flags'>
     <p class='noprint'>The title reads: Substitutes. To avoid having to carry multiple flags of the same signal, the ICS(international code of signals) uses 3 substitute flags. A substitute flag repeats the one at the indicated position. A drawing shows 3 flags for the 3 substitute flags. An example shows how to signal DD, which is to fly the flag signal Delta followed by the 1st substitute flag. DD means: "boats are not allowed to come alongside."</p>
 
+<div id='wrap'>
+  <img src='../media/content/2024_dayshapes_intro.jpg'>
+    <p class='noprint'>When in distress, signal using the N and C flags. Another visual way to communicate distress, say one is lacking signal flags, is to have a square flag above/below a ball shape (anything resembling a ball). This is known as a day shape.</p>
+    <a style='width: 18%;height: 20%;top: 68%;left: 49%;' alt="Day Shapes" title="Day Shapes" href="day_shapes.html">
+    <span>Day Shapes</span></a>
+</div>
+
   <img src='../media/content/2024_spelling_handflags.jpg' loading='lazy' alt='instructions on how to spell using flags'>
     <p class='noprint'>Single letter flags, like Kilo, are used to spell out words. An example shows how to spell the boat named Pino, using the following flags: Papa, India, November and Oscar. A title reads "Spelling", followed by: To begin spelling, hoist the Yankee and Zulu flags, which means, "The words which follow are in plain language." An example spells out the name Nastya using the following flags: November, Alpha, Sierra, Tango, Yankee and the 2nd substitute flag.</p>
 
