--- a/site/about.html
+++ b/site/about.html
@@ -23,6 +23,7 @@
   <gallery>
       <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' alt='Hand flag semaphore'></a>
       <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' alt='International Maritime Signal Flags'></a>
+      <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' alt='Day shapes'></a>
   </gallery>
 </main>
 <footer>
