--- a/site/day_shapes.html
+++ b/site/day_shapes.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <meta name='author' content='Rek Bell'>
   <meta name='description' content='Rabbit Waves'/>
-  <meta name='keywords' content='worldbuilding, travel'/>
+  <meta name='keywords' content='worldbuilding, travel, sailing'/>
   <meta name='license' content='name=BY-NC-SA(4.0), url=https://creativecommons.org/licenses/by-nc-sa/4.0/'/>
   <meta name='thumbnail' content='https://rabbitwaves/media/services/thumbnail.jpg' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
