--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name='license' content='name=BY-NC-SA(4.0), url=https://creativecommons.org/licenses/by-nc-sa/4.0/'/>
   <meta name='thumbnail' content='https://rabbitwaves/media/services/thumbnail.jpg' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='alternate'  type='application/rss+xml' title='Rabbi Waves' href='links/rss.xml' />
   <link rel='icon' type='image/x-icon' href='media/services/favicon.ico'>
   <link rel='me' href='https://merveilles.town/@rek'/>
   <title>Rabbit Waves</title>
